--- a/src/common/css/main.css
+++ b/src/common/css/main.css
@@ -4,7 +4,7 @@
     white-space: nowrap;
 }
 body{
-	background-color: #272727;width: 100%;height: 100%;overflow-x: hidden;
+	background-color: #272727;width: 100%;height: 100%;overflow: hidden;
 }
 
 
